Revision history for Perl extension Text::Starfish.

1.36 current
 - documentation improvements

1.35 7 Jul 2020 Tue 08:24:21 ADT
 - documentation improvements
 - fixing bug with test 20-simple_html: removing call to "comment"
   since CGI module is not available by default

1.34 6 Jul 2020 Mon 13:36:52 ADT
 - documentation improvements
 - fixed problem with test 20-simple (unnecessary use of CGI.pm)

1.33 6 Jul 2020
 - fixing bug with :prototype attribute, I guess it fails on earlier
   versions of Perl; removing it:
   Changing back echo :prototype (@) to echo(@)

1.32 5 Jul 2020
 - documentation improvements
 - testing improvements: test case renaming:
 - testfiles/07-html-cgi.html.sfish  was: 02.html.sfish
 - testfiles/07-html-cgi_html.out    was: 02_html.out
 - testfiles/08-tex		     was: 03
 - testfiles/09-text		     was: 05
 - testfiles/10-tex		     was: 06
 - testfiles/11-make		     was: 07
 - testfiles/12-make		     was: 08
 - testfiles/13-html		     was: 09
 - testfiles/14-text		     was: 02
 - testfiles/15-text                 was: 3
 - testfiles/16-rmHook               was: 4
 - testfiles/17-A_java - a more complex Java test
 - testfiles/18-p_t_java             was: 17
 - testfiles/19-p_t_java             was: 18
 - testing improvements, and addition of new tests
 - removing variable $Revision
 - started work on separate treatment of output delimiters:
   * to define as a new style variable OutDelimiters, and
   * to introduce number, e.g., //1+ .. //1- if the output
     contains //+ string, or similarly //2+ etc.
 - Changing opening output delimiter "\n#+\n" to "#+\n" and similarly to
   other styles.  This is a significant change that may break some existing
   programs. It is an ongoing process for the other styles.
 - Changes in html style: numbering in delimiters, removal of newline
 - Changes in makefile style: numbering of delimiters, removal of a newline
 - Changes in python style: numbering of delimiters, removal of a newline